[gd_scene load_steps=7 format=2]

[ext_resource path="res://setapng.png" type="Texture" id=1]
[ext_resource path="res://inicial2.png" type="Texture" id=2]
[ext_resource path="res://personagem_limpo.png" type="Texture" id=3]
[ext_resource path="res://instrucoes.gd" type="Script" id=4]
[ext_resource path="res://balao_de_fala.png.png" type="Texture" id=5]
[ext_resource path="res://textocerto.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -5, -1 )
scale = Vector2( 1.08, 1.2 )
texture = ExtResource( 2 )
centered = false

[node name="personagem" type="Sprite" parent="."]
position = Vector2( 140.5, 425 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="balao" type="Sprite" parent="."]
position = Vector2( 526, 320 )
scale = Vector2( 12.25, 6.51563 )
texture = ExtResource( 5 )

[node name="texto" type="Sprite" parent="."]
position = Vector2( 525, 265 )
scale = Vector2( 0.941819, 0.77907 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="."]
margin_left = 801.0
margin_top = 467.0
margin_right = 977.0
margin_bottom = 522.0

[node name="Button3" type="Button" parent="."]
margin_left = 928.0
margin_top = 451.0
margin_right = 962.0
margin_bottom = 485.0

[node name="Button4" type="Button" parent="."]
margin_left = 921.0
margin_top = 515.0
margin_right = 957.0
margin_bottom = 548.0

[node name="seta" type="Sprite" parent="."]
position = Vector2( 903, 496 )
scale = Vector2( 0.31338, 0.343072 )
texture = ExtResource( 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
